# perplexity-openai-api-updated

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  QUICKSTART.md  QUICK_START.md  README.md  README_VARIANTS.md  SCRIPTS_README.md  VARIANTS_README.md  docker-compose.yml  install_claude_perplexity.py  openai_server.py  openai_server_new.py  perplexity_cli.py  perplexity_setup.py  pyproject.toml  start_stack.cmd  sync.sh
.github/workflows/: publish.yml
setup/: __init__.py
setup/claude/: launch_claude_perplexity.py
setup/common/: launcher_utils.py  utils.py
setup/opencode/: install_opencode_perplexity.py  launch_opencode_perplexity.py
src/perplexity_webui_scraper/: __init__.py  config.py  constants.py  core.py  enums.py  exceptions.py  http.py  limits.py  logging.py  models.py  resilience.py  types.py
src/perplexity_webui_scraper/cli/: get_perplexity_session_token.py
src/perplexity_webui_scraper/mcp/: __init__.py  __main__.py  server.py
variants/: __init__.py
variants/claude/: __init__.py
variants/openai/: __init__.py  installer.py  launcher.py
variants/shared/: __init__.py  config.py  conversation.py  models.py  server.py
